--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{  "homepage": "https://likhith329.github.io/resetpasswordfe",
+{  "homepage": "https://likhith329.github.io/resetpasswordfe/",
   "name": "nodemailerfe",
   "version": "0.1.0",
   "private": true,
